fixed z-index of header on home page

--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+header {
+    z-index: 2;
+}
+
 #home-main {
     display: flex;
     justify-content: center;
